<resources>
    <string name="app_name">Buupass</string>
    <string name="login_Button">LOGIN</string>
    <string name="forgot_password_button"><u>Forgot password</u></string>
    <string name="register_button"><u>Register</u></string>
    <string name="email_address">Email Address</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_age">Your Age</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="male_radiobutton">Male</string>
    <string name="femaleRadiobutton">Female</string>
    <string name="password_edittext">Password</string>
    <string name="register_user">Register user</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="provide_email_to_reset_your_password">Provide Email To reset your password</string>
    <string name="fill_in_your_details">Fill In Your Details</string>
    <string name="action_settings">Settings</string>
    <string name="set_profile">Set Profile</string>
    <string name="addpost">Add Post</string>

    <string name="add_comment">Add comment</string>
    <string-array name="roles">
        <item>Passenger</item>
        <item>Driver</item>
        <item>Saccos Manager</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>