<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/image1"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardElevation="0dp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="45dp"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Username"
                android:textColorHint="@color/hintcolor"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="35dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/circle"
                android:layout_marginEnd="12dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Password"
                android:textColorHint="@color/hintcolor"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:background="@drawable/circle"
                android:layout_marginTop="15dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="@string/login_Button"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_button"
                    android:textColor="@color/white"
                    android:layout_marginStart="12dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="100dp"/>


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>