<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image2"
    tools:context=".ForgottenPassword">
    <TextView
        android:id="@+id/passwordforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/provide_email_to_reset_your_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="54dp"
        android:layout_height="95dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/leaf"
        android:layout_below="@id/passwordforgot"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="229dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="45dp"
            app:cardBackgroundColor="@android:color/transparent">
            <io.alterac.blurkit.BlurLayout
                android:id="@+id/blurLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:blk_downscaleFactor="0.6"
                app:blk_fps="0" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginTop="45dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/circle"
                    android:layout_marginEnd="12dp"/>
                <Button
                    android:id="@+id/resetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:layout_marginTop="15dp"
                    android:text="@string/reset_password_button"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    

</RelativeLayout>